[package]
name = "ontimeexecuter"
version = "0.1.0"
authors = ["Hossein Dindar <hosseind2017@gmail.com>"]
edition = "2018"
description = "A tiny rust package that lets you run your file on the date/time and with command that you have specified"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
settimeout = "0.1.2"
futures = "0.3.16"